bugfix, credentials troubleshooting